删掉了密码

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -4,8 +4,8 @@
 zombieDriver=3
 ciwangDriver=3
 
-defaultUserName=zheyu.czy
-defaultUserPassword=Ali2015,
+defaultUserName=
+defaultUserPassword=
 
 
 #coding.net\u7684url
