调整了目录结构

--- a/src/test/resources/rc/config.properties
+++ b/src/test/resources/rc/config.properties
@@ -23,7 +23,8 @@ chromeDriverInMac=chromedriver
 phantomJsInWin=phantomjs.exe
 phantomJsInMac=phantomjs-2.1.1-macosx/bin/phantomjs
 
-screenDir=screenshoot
+screenDir=/Users/ciwang/Desktop/
+#screenDir=screenshoot
 
 
 
